<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondFragment">

    <TextView
        android:id="@+id/textview_second"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:background="#EAEAEA"
        android:gravity="center"
        android:text="@string/EditMeeting"
        android:textColor="#0D71E7"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/AllCatergaries"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_second">

        <LinearLayout
            android:id="@+id/Meeting"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="10dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/meetingName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#FFFFFF">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/MeetingName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/NewMeeting"
                    android:inputType="textShortMessage"
                    android:textColor="#535353"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/detailedInfo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#FFFFFF">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/Notes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/notes"
                    android:inputType="textLongMessage" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/attendeeNames"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#FFFFFF">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/Attendees"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/attendees"
                    android:inputType="textPersonName" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/DateTimeLocation"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="10dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/dateOfMeeting"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#FFFFFF">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/Date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/date"
                    android:inputType="date" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/timeOfMeeting"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#FFFFFF"
                android:hint="@string/time">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/Time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/time"
                    android:inputType="time" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/locationOfMeeting"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#FFFFFF">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/Location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/location"
                    android:inputType="textPostalAddress" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/clickItem"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/priorityChoices"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#FFFFFF"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/priority"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:maxLines="1"
                    android:text="@string/priority"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/noneButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/none" />

                <Button
                    android:id="@+id/lowButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/low" />

                <Button
                    android:id="@+id/mediumButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/medium" />

                <Button
                    android:id="@+id/highButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/high" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/typeChoices"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#FFFFFF"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/type"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/infoButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/information" />

                <Button
                    android:id="@+id/discussButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/discussion" />

                <Button
                    android:id="@+id/permissionButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/permission" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/button_second"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/AddNewMeeting"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AllCatergaries" />
</androidx.constraintlayout.widget.ConstraintLayout>