<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.AddMeetingFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/addNewMeetingLayout"
            android:layout_width="405dp"
            android:layout_height="597dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="5dp"
            android:background="#E8E8E8"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.428"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="61dp"
                android:background="#0D71EC"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/backBtn"
                    android:layout_width="36dp"
                    android:layout_height="72dp"
                    android:layout_gravity="center_vertical|end"
                    android:layout_marginLeft="7px"
                    android:layout_weight="1"
                    android:background="?selectableItemBackgroundBorderless"
                    android:baselineAlignBottom="false"
                    android:cropToPadding="false"
                    android:scaleType="fitXY"
                    android:src="@drawable/back_button"
                    android:tint="#FFFFFF" />

                <TextView
                    android:id="@+id/NewMeeting"
                    android:layout_width="338dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:paddingRight="0px"
                    android:text="@string/newMeeting"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/meetingNamesAndDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="5dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/meetingName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#F4F4F4">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/nameDetail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/newMeetingName"
                        android:inputType="textShortMessage"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/notesName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#F4F4F4">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/notesDetail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/notesDetail"
                        android:inputType="textLongMessage"
                        android:textSize="14sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/attendeesName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#F4F4F4">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/attendeesDetail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/attendeesDetails"
                        android:inputType="textPersonName"
                        android:textSize="14sp" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/meetingDateTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="10dp"
                android:paddingTop="5dp"
                android:paddingRight="10dp"
                android:paddingBottom="5dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/meetingDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#F4F4F4">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/dateDetail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:cursorVisible="false"
                        android:ems="10"
                        android:focusable="false"
                        android:focusableInTouchMode="true"
                        android:hint="@string/date"
                        android:inputType="date"
                        android:textSize="14sp"
                        android:textStyle="bold" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/meetingTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#F4F4F4">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/timeDetail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:cursorVisible="false"
                        android:ems="10"
                        android:focusable="false"
                        android:focusableInTouchMode="true"
                        android:hint="@string/time"
                        android:inputType="time"
                        android:textSize="14sp"
                        android:textStyle="bold" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/meetingLocationDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="10dp"
                android:paddingTop="5dp"
                android:paddingRight="10dp"
                android:paddingBottom="5dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/meetingLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#F4F4F4">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/locationDetail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/location"
                        android:inputType="textPostalAddress"
                        android:textSize="14sp"
                        android:textStyle="bold" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/meetingNotificationDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="10dp"
                android:paddingTop="5dp"
                android:paddingRight="10dp"
                android:paddingBottom="5dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/meetingNotification"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#F4F4F4">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/notificationDetail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:cursorVisible="false"
                        android:ems="10"
                        android:focusable="false"
                        android:focusableInTouchMode="true"
                        android:hint="Set Notification"
                        android:inputType="textPostalAddress"
                        android:textSize="14sp"
                        android:textStyle="bold" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/priorityAndTypeDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="10dp"
                android:paddingTop="5dp"
                android:paddingRight="10dp"
                android:paddingBottom="5dp">

                <LinearLayout
                    android:id="@+id/meetingPriorityDetails"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#F4F4F4"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/meetingPriority"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="10px"
                        android:gravity="center"
                        android:text="@string/priority"
                        android:textColor="#000000"
                        android:textStyle="bold" />

                    <RadioGroup
                        android:id="@+id/priorityRadioGroup"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/noneButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/none" />

                        <RadioButton
                            android:id="@+id/lowButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/low" />

                        <RadioButton
                            android:id="@+id/mediumButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/medium" />

                        <RadioButton
                            android:id="@+id/highButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/high" />

                    </RadioGroup>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/meetingTypeDetails"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#F4F4F4"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/meetingType"
                        android:layout_width="40dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="10px"
                        android:gravity="center"
                        android:text="@string/type"
                        android:textColor="#000000"
                        android:textStyle="bold" />

                    <RadioGroup
                        android:id="@+id/typeRadioGroup"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="26px"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/workButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/information" />

                        <RadioButton
                            android:id="@+id/schoolButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/discussion" />

                        <RadioButton
                            android:id="@+id/otherButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/permission" />
                    </RadioGroup>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/doneButtonLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp">

                <Button
                    android:id="@+id/doneButton"
                    android:layout_width="340dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="65px"
                    android:layout_marginTop="15px"
                    android:background="#0D71EC"
                    android:text="@string/done"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>